<resources>
    <string name="app_name">Expense Recorder</string>
    <string name="this_month">This Month</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View All</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="expense_date">Expense Date</string>
    <string name="income_type">Income Type</string>
    <string name="comment">Comment</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="expense_type">Expense Type</string>
    <string name="income_date">Income Date</string>
    <string name="my_transactions">My Transactions</string>
    <string name="amount_error">Please enter some value for Amount</string>
    <string name="date_error">Please enter some value for Date</string>
    <string name="income_type_error">Please add Income Type</string>
    <string name="comment_error">Please add your Comment</string>
    <string name="expense_type_error">Please add Expense Type</string>
    <string name="edit_income">Edit Income</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="add_year">Add Year</string>
    <string name="no_transactions_found">No Transactions Found</string>
</resources>