<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activities.DashboardActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/toolbar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/drawable_gradient"
        android:elevation="10dp">


        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/this_month"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|center_vertical"
            android:text="@string/income"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_up_arrow"
            app:layout_constraintEnd_toStartOf="@+id/tvExpense"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

        <TextView
            android:id="@+id/tvExpense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="end|center_vertical"
            android:text="@string/expense"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:drawableEndCompat="@drawable/ic_down_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/tvIncome"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading" />


        <TextView
            android:id="@+id/tvIncomeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="₹25000"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/tvExpenseValue"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIncome" />

        <TextView
            android:id="@+id/tvExpenseValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="₹2000"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/tvIncomeValue"
            app:layout_constraintTop_toBottomOf="@+id/tvIncome" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">


        <TextView
            android:id="@+id/tvHeading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:text="@string/recent_transactions"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvViewTransactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="viewTransactionsClick"
            android:text="@string/view_all"
            android:textColor="@color/grey"
            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:layout_marginTop="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <TextView
            android:id="@+id/noTvDataDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/no_transactions_found"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:visibility="gone"
            />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/baseFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onBaseFabClick"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_add"
            app:tint="@android:color/white" />

        <LinearLayout
            android:id="@+id/addExpenseLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/addIncomeLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/expenseLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/drawable_edittext_background"
                android:fontFamily="@font/poppins_medium"
                android:onClick="onAddExpenseFabClick"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:elevation="2dp"
                android:text="@string/add_expense"
                android:textColor="@color/dark_grey"
                android:typeface="normal" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addExpenseFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onAddExpenseFabClick"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add"
                app:tint="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addIncomeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/baseFloatingActionButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/incomeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/drawable_edittext_background"
                android:fontFamily="@font/poppins_medium"
                android:onClick="onAddIncomeFabClick"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:text="@string/add_income"
                android:elevation="2dp"
                android:textColor="@color/dark_grey"
                android:typeface="normal" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addIncomeFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onAddIncomeFabClick"
                android:tint="@android:color/white"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add"
                app:tint="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>